--- a/src/App.css
+++ b/src/App.css
@@ -33,6 +33,19 @@
   color: #61dafb;
 }
 
+.foodSearch {
+  display: flex;
+  flex-direction: column;
+
+
+}
+
+.foodSearch input {
+  width: 12vw;
+  margin-top: 20px;
+  margin-left: 400px;
+}
+
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
